Fixes #206: gap between navbar and content is too wide when submenu not present.

--- a/files/static/less/core.less
+++ b/files/static/less/core.less
@@ -33,7 +33,6 @@ body {
     font-weight:400;
     margin:0;
     overflow: hidden;
-    padding:87px 0 0 0;
 }
 
 @media all and (max-width: 980px) {
