--- a/files/static/less/navbar.less
+++ b/files/static/less/navbar.less
@@ -65,3 +65,12 @@ nav.subnavbar {
         }
     }
 }
+
+/* Controls gap between navbar and content */
+
+.subnavbar + section {
+    padding: 87px 0 0 0;
+}
+.navbar + section {
+    padding: 52px 0 0 0;
+}
